// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #290A0A !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #FCE8E9 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #003320 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #EBFAF0 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #2B2208 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #FFF9E6 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getNotificationContentJssStyle() should return correct JssStyle 1`] = `
{
  "@media(min-width:760px)": {
    "marginLeft": "-8px",
  },
  "display": "grid",
  "gap": "4px",
  "maxWidth": "50rem",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle 1`] = `
{
  "@media(max-width:759px)": {
    "display": "none",
  },
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#FCE8E9",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#290A0A",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto",
  },
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr) auto",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 3`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#001A33",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: true 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto",
  },
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: true 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto auto",
  },
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr) auto",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#001A33",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#EBFAF0",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#003320",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#FFF9E6",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#2B2208",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;
